--- a/F2018Travel/F2018Travel.csproj
+++ b/F2018Travel/F2018Travel.csproj
@@ -221,6 +221,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\api\DestinationsController.cs" />
+    <Compile Include="Controllers\api\RegionsController.cs" />
     <Compile Include="Controllers\DestinationsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
